rust/tests/trybuild_soe_max.stderr
error[E0599]: no function or associated item named `new` found for struct `swag::soe::SoE<Max<i32, i32>>` in the current scope
 --> $DIR/trybuild_soe_max.fail:6:27
  |
6 |     SoE::<Max<i32, i32>>::new();
  |                           ^^^ function or associated item not found in `swag::soe::SoE<Max<i32, i32>>`

error[E0277]: the trait bound `Max<i32, i32>: AggregateGroup<Max<i32, i32>>` is not satisfied
  --> $DIR/trybuild_soe_max.fail:6:5
   |
6  |     SoE::<Max<i32, i32>>::new();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `AggregateGroup<Max<i32, i32>>` is not implemented for `Max<i32, i32>`
   |
  ::: $WORKSPACE/src/soe/mod.rs
   |
   |     BinOp: AggregateGroup<BinOp> + AggregateOperator + Clone
   |            --------------------- required by this bound in `swag::soe::SoE`
